<package>
  <name>sdh_gazebo</name>
  <version>0.1.0</version>
  <description>sdh_gazebo</description>
  <maintainer email="jdluijkx@gmail.com">Jelle</maintainer>

  <license>BSD</license>

  <author email="jdluijkx@gmail.com">Jelle</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>schunk_modular_robotics</build_depend>
  <run_depend>schunk_modular_robotics</run_depend>
  
  <build_depend>cob_gazebo_ros_control</build_depend>
  <run_depend>cob_gazebo_ros_control</run_depend>
  <run_depend>sdh_simulated_tactile_sensors</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
