<?xml version="1.0"?>
<package format="2">
  <name>sdh_interface</name>
  <version>0.0.0</version>
  <description>Package to command SDH hand.</description>

  
  <maintainer email="jdluijkx@gmail.com">Jelle</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>schunk_sdh</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cob_srvs</exec_depend>


  <export>
   

  </export>
</package>
